--- a/alx-system_engineering-devops.ipynb
+++ b/alx-system_engineering-devops.ipynb
@@ -1925,17 +1925,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main e07588b] 13-symbolic_link\n",
-      " 3 files changed, 109 insertions(+), 4 deletions(-)\n",
-      " create mode 100755 0x00-shell_basics/13-symbolic_link\n",
-      " create mode 120000 __ls__\n"
+      "[main d2e757b] 13-symbolic_link\n",
+      " 1 file changed, 26 insertions(+), 8 deletions(-)\n"
      ]
     },
     {
@@ -1943,7 +1941,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   94a5f7f..e07588b  main -> main\n"
+      "   e07588b..d2e757b  main -> main\n"
      ]
     }
    ],
@@ -1951,6 +1949,114 @@
     "%%bash\n",
     "git add .\n",
     "git commit -m \"13-symbolic_link\"\n",
+    "git push"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### \n",
+    "\n",
+    "\n",
+    "---\n",
+    "<center>\n",
+    "<h4> 14. Copy HTML files</h4>\n",
+    "</center>\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Create a script that copies all the HTML files from the current working directory to the parent of the working directory, but only copy files that did not exist in the parent of the working directory or were newer than the versions in the parent of the working directory.\n",
+    "\n",
+    "##### You can consider that all HTML files have the extension `.html`\n",
+    "\n",
+    "#### Repo:\n",
+    "\n",
+    "* GitHub repository: `alx-system_engineering-devops`\n",
+    "* Directory: `0x00-shell_basics`\n",
+    "* File: `14-copy_html`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing 0x00-shell_basics/14-copy_html\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file 0x00-shell_basics/14-copy_html\n",
+    "#!/bin/bash\n",
+    "cp -u  ./*.HTML ../"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total 80\n",
+      "drwxr-xr-x  4 elkomy elkomy  4096 Feb 28 00:38 .\n",
+      "drwxr-xr-x 17 elkomy elkomy  4096 Feb 28 00:39 ..\n",
+      "drwxr-xr-x  8 elkomy elkomy  4096 Feb 28 00:26 .git\n",
+      "-rw-r--r--  1 elkomy elkomy    11 Feb 10 18:55 .gitignore\n",
+      "drwxr-xr-x  2 elkomy elkomy  4096 Feb 28 00:37 0x00-shell_basics\n",
+      "-rw-r--r--  1 elkomy elkomy   554 Feb 24 22:01 README.md\n",
+      "lrwxrwxrwx  1 elkomy elkomy     7 Feb 28 00:25 __ls__ -> /bin/ls\n",
+      "-rw-r--r--  1 elkomy elkomy 56908 Feb 28 00:39 alx-system_engineering-devops.ipynb\n",
+      "-rw-r--r--  1 elkomy elkomy     0 Feb 28 00:39 test.HTML\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "touch ./test.HTML\n",
+    "chmod u+x 0x00-shell_basics/14-copy_html\n",
+    "source ./0x00-shell_basics/14-copy_html\n",
+    "ls -la"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[main d2e757b] 13-symbolic_link\n",
+      " 1 file changed, 26 insertions(+), 8 deletions(-)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
+      "   e07588b..d2e757b  main -> main\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "git add .\n",
+    "git commit -m \"14-copy_html\"\n",
     "git push"
    ]
   },
