--- a/alx-system_engineering-devops.ipynb
+++ b/alx-system_engineering-devops.ipynb
@@ -1984,26 +1984,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing 0x00-shell_basics/14-copy_html\n"
+      "Overwriting 0x00-shell_basics/14-copy_html\n"
      ]
     }
    ],
    "source": [
     "%%file 0x00-shell_basics/14-copy_html\n",
     "#!/bin/bash\n",
-    "cp -u  ./*.HTML ../"
+    "cp -u  *.HTML ../"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -2013,13 +2013,13 @@
       "total 80\n",
       "drwxr-xr-x  4 elkomy elkomy  4096 Feb 28 00:38 .\n",
       "drwxr-xr-x 17 elkomy elkomy  4096 Feb 28 00:39 ..\n",
-      "drwxr-xr-x  8 elkomy elkomy  4096 Feb 28 00:26 .git\n",
+      "drwxr-xr-x  8 elkomy elkomy  4096 Feb 28 00:39 .git\n",
       "-rw-r--r--  1 elkomy elkomy    11 Feb 10 18:55 .gitignore\n",
       "drwxr-xr-x  2 elkomy elkomy  4096 Feb 28 00:37 0x00-shell_basics\n",
       "-rw-r--r--  1 elkomy elkomy   554 Feb 24 22:01 README.md\n",
       "lrwxrwxrwx  1 elkomy elkomy     7 Feb 28 00:25 __ls__ -> /bin/ls\n",
-      "-rw-r--r--  1 elkomy elkomy 56908 Feb 28 00:39 alx-system_engineering-devops.ipynb\n",
-      "-rw-r--r--  1 elkomy elkomy     0 Feb 28 00:39 test.HTML\n"
+      "-rw-r--r--  1 elkomy elkomy 57005 Feb 28 00:41 alx-system_engineering-devops.ipynb\n",
+      "-rw-r--r--  1 elkomy elkomy     0 Feb 28 00:41 test.HTML\n"
      ]
     }
    ],
@@ -2033,15 +2033,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main d2e757b] 13-symbolic_link\n",
-      " 1 file changed, 26 insertions(+), 8 deletions(-)\n"
+      "[main 133fa37] 14-copy_html\n",
+      " 3 files changed, 114 insertions(+), 6 deletions(-)\n",
+      " create mode 100755 0x00-shell_basics/14-copy_html\n",
+      " create mode 100644 test.HTML\n"
      ]
     },
     {
@@ -2049,7 +2051,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   e07588b..d2e757b  main -> main\n"
+      "   d2e757b..133fa37  main -> main\n"
      ]
     }
    ],
