--- a/alx-system_engineering-devops.ipynb
+++ b/alx-system_engineering-devops.ipynb
@@ -1984,7 +1984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -1998,12 +1998,12 @@
    "source": [
     "%%file 0x00-shell_basics/14-copy_html\n",
     "#!/bin/bash\n",
-    "cp -u  *.HTML ../"
+    "cp -u  *.HTML .."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -2013,12 +2013,12 @@
       "total 80\n",
       "drwxr-xr-x  4 elkomy elkomy  4096 Feb 28 00:38 .\n",
       "drwxr-xr-x 17 elkomy elkomy  4096 Feb 28 00:39 ..\n",
-      "drwxr-xr-x  8 elkomy elkomy  4096 Feb 28 00:39 .git\n",
+      "drwxr-xr-x  8 elkomy elkomy  4096 Feb 28 00:41 .git\n",
       "-rw-r--r--  1 elkomy elkomy    11 Feb 10 18:55 .gitignore\n",
       "drwxr-xr-x  2 elkomy elkomy  4096 Feb 28 00:37 0x00-shell_basics\n",
       "-rw-r--r--  1 elkomy elkomy   554 Feb 24 22:01 README.md\n",
       "lrwxrwxrwx  1 elkomy elkomy     7 Feb 28 00:25 __ls__ -> /bin/ls\n",
-      "-rw-r--r--  1 elkomy elkomy 57005 Feb 28 00:41 alx-system_engineering-devops.ipynb\n",
+      "-rw-r--r--  1 elkomy elkomy 56901 Feb 28 00:41 alx-system_engineering-devops.ipynb\n",
       "-rw-r--r--  1 elkomy elkomy     0 Feb 28 00:41 test.HTML\n"
      ]
     }
@@ -2033,17 +2033,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 133fa37] 14-copy_html\n",
-      " 3 files changed, 114 insertions(+), 6 deletions(-)\n",
-      " create mode 100755 0x00-shell_basics/14-copy_html\n",
-      " create mode 100644 test.HTML\n"
+      "[main 02ecc88] 14-copy_html\n",
+      " 2 files changed, 14 insertions(+), 12 deletions(-)\n"
      ]
     },
     {
@@ -2051,7 +2049,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   d2e757b..133fa37  main -> main\n"
+      "   133fa37..02ecc88  main -> main\n"
      ]
     }
    ],
