--- a/alx-system_engineering-devops.ipynb
+++ b/alx-system_engineering-devops.ipynb
@@ -1984,7 +1984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -1998,14 +1998,21 @@
    "source": [
     "%%file 0x00-shell_basics/14-copy_html\n",
     "#!/bin/bash\n",
-    "cp -u  *.HTML .."
+    "cp -u  *.html .."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "cp: cannot stat '*.html': No such file or directory\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -2013,13 +2020,13 @@
       "total 80\n",
       "drwxr-xr-x  4 elkomy elkomy  4096 Feb 28 00:38 .\n",
       "drwxr-xr-x 17 elkomy elkomy  4096 Feb 28 00:39 ..\n",
-      "drwxr-xr-x  8 elkomy elkomy  4096 Feb 28 00:41 .git\n",
+      "drwxr-xr-x  8 elkomy elkomy  4096 Feb 28 00:42 .git\n",
       "-rw-r--r--  1 elkomy elkomy    11 Feb 10 18:55 .gitignore\n",
       "drwxr-xr-x  2 elkomy elkomy  4096 Feb 28 00:37 0x00-shell_basics\n",
       "-rw-r--r--  1 elkomy elkomy   554 Feb 24 22:01 README.md\n",
       "lrwxrwxrwx  1 elkomy elkomy     7 Feb 28 00:25 __ls__ -> /bin/ls\n",
-      "-rw-r--r--  1 elkomy elkomy 56901 Feb 28 00:41 alx-system_engineering-devops.ipynb\n",
-      "-rw-r--r--  1 elkomy elkomy     0 Feb 28 00:41 test.HTML\n"
+      "-rw-r--r--  1 elkomy elkomy 56901 Feb 28 00:43 alx-system_engineering-devops.ipynb\n",
+      "-rw-r--r--  1 elkomy elkomy     0 Feb 28 00:43 test.HTML\n"
      ]
     }
    ],
@@ -2033,15 +2040,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 02ecc88] 14-copy_html\n",
-      " 2 files changed, 14 insertions(+), 12 deletions(-)\n"
+      "[main b395211] 14-copy_html\n",
+      " 2 files changed, 10 insertions(+), 12 deletions(-)\n"
      ]
     },
     {
@@ -2049,7 +2056,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   133fa37..02ecc88  main -> main\n"
+      "   02ecc88..b395211  main -> main\n"
      ]
     }
    ],
