--- a/alx-system_engineering-devops.ipynb
+++ b/alx-system_engineering-devops.ipynb
@@ -2040,15 +2040,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main b395211] 14-copy_html\n",
-      " 2 files changed, 10 insertions(+), 12 deletions(-)\n"
+      "[main e386718] 14-copy_html\n",
+      " 2 files changed, 18 insertions(+), 11 deletions(-)\n"
      ]
     },
     {
@@ -2056,7 +2056,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   02ecc88..b395211  main -> main\n"
+      "   b395211..e386718  main -> main\n"
      ]
     }
    ],
@@ -2064,6 +2064,150 @@
     "%%bash\n",
     "git add .\n",
     "git commit -m \"14-copy_html\"\n",
+    "git push"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### \n",
+    "\n",
+    "\n",
+    "---\n",
+    "<center>\n",
+    "<h4> 15. Let's move</h4>\n",
+    "</center>\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Create a script that moves all files beginning with an uppercase letter to the directory `/tmp/u`.\n",
+    "\n",
+    "##### You can assume that the directory `/tmp/u` will exist when we will run your script\n",
+    "\n",
+    "##### You can consider that all HTML files have the extension `.html`\n",
+    "```bash\n",
+    "ubuntu@ip-172-31-63-244:/tmp/sym$ ls -la\n",
+    "total 148\n",
+    "drwxrwxr-x  3 ubuntu ubuntu   4096 Sep 20 03:33 .\n",
+    "drwxrwxrwt 12 root   root   139264 Sep 20 03:26 ..\n",
+    "-rw-rw-r--  1 ubuntu ubuntu      0 Sep 20 03:32 My_file\n",
+    "lrwxrwxrwx  1 ubuntu ubuntu      7 Sep 20 03:24 __ls__ -> /bin/ls\n",
+    "-rw-rw-r--  1 ubuntu ubuntu      0 Sep 20 03:32 Elif_ym\n",
+    "-rw-rw-r--  1 ubuntu ubuntu      0 Sep 20 03:32 random_file\n",
+    "ubuntu@ip-172-31-63-244:/tmp/sym$ ls -la /tmp/u\n",
+    "total 8\n",
+    "drwxrwxr-x 2 ubuntu ubuntu 4096 Sep 20 03:33 .\n",
+    "drwxrwxr-x 3 ubuntu ubuntu 4096 Sep 20 03:33 ..\n",
+    "ubuntu@ip-172-31-63-244:/tmp/sym$ ./100-lets_move\n",
+    "ubuntu@ip-172-31-63-244:/tmp/sym$ ls -la\n",
+    "total 148\n",
+    "drwxrwxr-x  3 ubuntu ubuntu   4096 Sep 20 03:33 .\n",
+    "drwxrwxrwt 12 root   root   139264 Sep 20 03:26 ..\n",
+    "lrwxrwxrwx  1 ubuntu ubuntu      7 Sep 20 03:24 __ls__ -> /bin/ls\n",
+    "-rw-rw-r--  1 ubuntu ubuntu      0 Sep 20 03:32 random_file\n",
+    "ubuntu@ip-172-31-63-244:/tmp/sym$ ls -la /tmp/u\n",
+    "total 8\n",
+    "drwxrwxr-x 2 ubuntu ubuntu 4096 Sep 20 03:33 .\n",
+    "drwxrwxr-x 3 ubuntu ubuntu 4096 Sep 20 03:33 ..\n",
+    "-rw-rw-r-- 1 ubuntu ubuntu    0 Sep 20 03:32 My_file\n",
+    "-rw-rw-r-- 1 ubuntu ubuntu    0 Sep 20 03:32 Elif_ym\n",
+    "```\n",
+    "\n",
+    "#### Repo:\n",
+    "\n",
+    "* GitHub repository: `alx-system_engineering-devops`\n",
+    "* Directory: `0x00-shell_basics`\n",
+    "* File: `100-lets_move`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing 0x00-shell_basics/100-lets_move\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file 0x00-shell_basics/100-lets_move\n",
+    "#!/bin/bash\n",
+    "mv [[:upper:]]* /tmp/u/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "mv: cannot move 'README.md' to '/tmp/u/': Not a directory\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total 84\n",
+      "drwxr-xr-x  4 elkomy elkomy  4096 Feb 28 00:38 .\n",
+      "drwxr-xr-x 17 elkomy elkomy  4096 Feb 28 00:39 ..\n",
+      "drwxr-xr-x  8 elkomy elkomy  4096 Feb 28 00:43 .git\n",
+      "-rw-r--r--  1 elkomy elkomy    11 Feb 10 18:55 .gitignore\n",
+      "drwxr-xr-x  2 elkomy elkomy  4096 Feb 28 00:49 0x00-shell_basics\n",
+      "-rw-r--r--  1 elkomy elkomy   554 Feb 24 22:01 README.md\n",
+      "lrwxrwxrwx  1 elkomy elkomy     7 Feb 28 00:25 __ls__ -> /bin/ls\n",
+      "-rw-r--r--  1 elkomy elkomy 61343 Feb 28 00:49 alx-system_engineering-devops.ipynb\n",
+      "-rw-r--r--  1 elkomy elkomy     0 Feb 28 00:49 test.HTML\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "touch ./test.HTML\n",
+    "chmod u+x 0x00-shell_basics/100-lets_move\n",
+    "source ./0x00-shell_basics/100-lets_move\n",
+    "ls -la"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[main e386718] 14-copy_html\n",
+      " 2 files changed, 18 insertions(+), 11 deletions(-)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
+      "   b395211..e386718  main -> main\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "git add .\n",
+    "git commit -m \"100-lets_move\"\n",
     "git push"
    ]
   },
