--- a/alx-system_engineering-devops.ipynb
+++ b/alx-system_engineering-devops.ipynb
@@ -2184,15 +2184,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main e386718] 14-copy_html\n",
-      " 2 files changed, 18 insertions(+), 11 deletions(-)\n"
+      "[main 34a8c29] 100-lets_move\n",
+      " 2 files changed, 150 insertions(+), 4 deletions(-)\n",
+      " create mode 100755 0x00-shell_basics/100-lets_move\n"
      ]
     },
     {
@@ -2200,7 +2201,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   b395211..e386718  main -> main\n"
+      "   e386718..34a8c29  main -> main\n"
      ]
     }
    ],
@@ -2208,6 +2209,129 @@
     "%%bash\n",
     "git add .\n",
     "git commit -m \"100-lets_move\"\n",
+    "git push"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### \n",
+    "\n",
+    "\n",
+    "---\n",
+    "<center>\n",
+    "<h4> 16. Clean Emacs</h4>\n",
+    "</center>\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Create a script that deletes all files in the current working directory that end with the character `~`.\n",
+    "\n",
+    "\n",
+    "```bash\n",
+    "ubuntu@ip-172-31-63-244:/tmp/sym$ ls\n",
+    "main.c  main.c~  Makefile~\n",
+    "ubuntu@ip-172-31-63-244:/tmp/sym$ ./101-clean_emacs\n",
+    "ubuntu@ip-172-31-63-244:/tmp/emacs$ ls\n",
+    "main.c\n",
+    "ubuntu@ip-172-31-63-244:/tmp/emacs$ ```\n",
+    "\n",
+    "#### Repo:\n",
+    "\n",
+    "* GitHub repository: `alx-system_engineering-devops`\n",
+    "* Directory: `0x00-shell_basics`\n",
+    "* File: `101-clean_emacs`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing 0x00-shell_basics/101-clean_emacs\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file 0x00-shell_basics/101-clean_emacs\n",
+    "#!/bin/bash\n",
+    "rm *~"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "rm: cannot remove '*~': No such file or directory\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total 88\n",
+      "drwxr-xr-x  4 elkomy elkomy  4096 Feb 28 00:38 .\n",
+      "drwxr-xr-x 17 elkomy elkomy  4096 Feb 28 00:39 ..\n",
+      "drwxr-xr-x  8 elkomy elkomy  4096 Feb 28 00:50 .git\n",
+      "-rw-r--r--  1 elkomy elkomy    11 Feb 10 18:55 .gitignore\n",
+      "drwxr-xr-x  2 elkomy elkomy  4096 Feb 28 00:56 0x00-shell_basics\n",
+      "-rw-r--r--  1 elkomy elkomy   554 Feb 24 22:01 README.md\n",
+      "lrwxrwxrwx  1 elkomy elkomy     7 Feb 28 00:25 __ls__ -> /bin/ls\n",
+      "-rw-r--r--  1 elkomy elkomy 64487 Feb 28 00:56 alx-system_engineering-devops.ipynb\n",
+      "-rw-r--r--  1 elkomy elkomy     0 Feb 28 00:56 test.HTML\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "touch ./test.HTML\n",
+    "chmod u+x 0x00-shell_basics/101-clean_emacs\n",
+    "source ./0x00-shell_basics/101-clean_emacs\n",
+    "ls -la"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[main 34a8c29] 100-lets_move\n",
+      " 2 files changed, 150 insertions(+), 4 deletions(-)\n",
+      " create mode 100755 0x00-shell_basics/100-lets_move\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
+      "   e386718..34a8c29  main -> main\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "git add .\n",
+    "git commit -m \"101-clean_emacs\"\n",
     "git push"
    ]
   },
