--- a/alx-system_engineering-devops.ipynb
+++ b/alx-system_engineering-devops.ipynb
@@ -2307,16 +2307,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 34a8c29] 100-lets_move\n",
-      " 2 files changed, 150 insertions(+), 4 deletions(-)\n",
-      " create mode 100755 0x00-shell_basics/100-lets_move\n"
+      "[main 7631878] 101-clean_emacs\n",
+      " 2 files changed, 130 insertions(+), 4 deletions(-)\n",
+      " create mode 100755 0x00-shell_basics/101-clean_emacs\n"
      ]
     },
     {
@@ -2324,7 +2324,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   e386718..34a8c29  main -> main\n"
+      "   34a8c29..7631878  main -> main\n"
      ]
     }
    ],
@@ -2332,6 +2332,137 @@
     "%%bash\n",
     "git add .\n",
     "git commit -m \"101-clean_emacs\"\n",
+    "git push"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### \n",
+    "\n",
+    "\n",
+    "---\n",
+    "<center>\n",
+    "<h4> 17. Tree</h4>\n",
+    "</center>\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Create a script that creates the directories` welcome/`, `welcome/to/` and `welcome/to/school` in the current directory.\n",
+    "\n",
+    "##### You are only allowed to use two spaces (and lines) in your script, not more.\n",
+    "\n",
+    "\n",
+    "```bash\n",
+    "julien@ubuntu:/tmp/h$ ls -l\n",
+    "total 4\n",
+    "-rwxrw-r-- 1 julien julien 44 Sep 20 12:09 102-tree\n",
+    "julien@ubuntu:/tmp/h$ wc -l 102-tree \n",
+    "2 102-tree\n",
+    "julien@ubuntu:/tmp/h$ head -1 102-tree \n",
+    "#!/bin/bash\n",
+    "julien@ubuntu:/tmp/h$ tr -cd ' ' < 102-tree | wc -c # you do not have to understand this yet, but the result should be 2, 1 or 0\n",
+    "2\n",
+    "julien@ubuntu:/tmp/h$ ./102-tree \n",
+    "julien@ubuntu:/tmp/h$ ls\n",
+    "102-tree  welcome\n",
+    "julien@ubuntu:/tmp/h$ ls welcome/\n",
+    "to\n",
+    "julien@ubuntu:/tmp/h$ ls -l welcome/to\n",
+    "total 4\n",
+    "drwxrwxr-x 2 julien julien 4096 Sep 20 12:11 school\n",
+    "julien@ubuntu:/tmp/h$ \n",
+    " ```\n",
+    "\n",
+    "#### Repo:\n",
+    "\n",
+    "* GitHub repository: `alx-system_engineering-devops`\n",
+    "* Directory: `0x00-shell_basics`\n",
+    "* File: `102-tree`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing 0x00-shell_basics/102-tree\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file 0x00-shell_basics/102-tree\n",
+    "#!/bin/bash\n",
+    "mkdir welcome/ welcome/to/ welcome/to/school"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "mkdir: cannot create directory ‘welcome/’: File exists\n",
+      "mkdir: cannot create directory ‘welcome/to/’: File exists\n",
+      "mkdir: cannot create directory ‘welcome/to/school’: File exists\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "to\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "touch ./test.HTML\n",
+    "chmod u+x 0x00-shell_basics/102-tree\n",
+    "source ./0x00-shell_basics/102-tree\n",
+    "ls welcome/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[main 7631878] 101-clean_emacs\n",
+      " 2 files changed, 130 insertions(+), 4 deletions(-)\n",
+      " create mode 100755 0x00-shell_basics/101-clean_emacs\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
+      "   34a8c29..7631878  main -> main\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "git add .\n",
+    "git commit -m \"102-tree\"\n",
     "git push"
    ]
   },
