--- a/alx-system_engineering-devops.ipynb
+++ b/alx-system_engineering-devops.ipynb
@@ -2389,33 +2389,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing 0x00-shell_basics/102-tree\n"
+      "Overwriting 0x00-shell_basics/102-tree\n"
      ]
     }
    ],
    "source": [
     "%%file 0x00-shell_basics/102-tree\n",
     "#!/bin/bash\n",
-    "mkdir welcome/ welcome/to/ welcome/to/school"
+    "mkdir  welcome/to/ welcome/to/school"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "mkdir: cannot create directory ‘welcome/’: File exists\n",
       "mkdir: cannot create directory ‘welcome/to/’: File exists\n",
       "mkdir: cannot create directory ‘welcome/to/school’: File exists\n"
      ]
@@ -2438,16 +2437,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 7631878] 101-clean_emacs\n",
-      " 2 files changed, 130 insertions(+), 4 deletions(-)\n",
-      " create mode 100755 0x00-shell_basics/101-clean_emacs\n"
+      "[main 9f10d30] 102-tree\n",
+      " 2 files changed, 138 insertions(+), 5 deletions(-)\n",
+      " create mode 100755 0x00-shell_basics/102-tree\n"
      ]
     },
     {
@@ -2455,7 +2454,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   34a8c29..7631878  main -> main\n"
+      "   7631878..9f10d30  main -> main\n"
      ]
     }
    ],
