--- a/alx-system_engineering-devops.ipynb
+++ b/alx-system_engineering-devops.ipynb
@@ -2389,7 +2389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -2403,19 +2403,18 @@
    "source": [
     "%%file 0x00-shell_basics/102-tree\n",
     "#!/bin/bash\n",
-    "mkdir  welcome/to/ welcome/to/school"
+    "mkdir welcome/to/school"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "mkdir: cannot create directory ‘welcome/to/’: File exists\n",
       "mkdir: cannot create directory ‘welcome/to/school’: File exists\n"
      ]
     },
@@ -2437,16 +2436,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 9f10d30] 102-tree\n",
-      " 2 files changed, 138 insertions(+), 5 deletions(-)\n",
-      " create mode 100755 0x00-shell_basics/102-tree\n"
+      "[main 1d64d7f] 102-tree\n",
+      " 2 files changed, 10 insertions(+), 11 deletions(-)\n"
      ]
     },
     {
@@ -2454,7 +2452,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   7631878..9f10d30  main -> main\n"
+      "   9f10d30..1d64d7f  main -> main\n"
      ]
     }
    ],
