--- a/alx-system_engineering-devops.ipynb
+++ b/alx-system_engineering-devops.ipynb
@@ -2389,7 +2389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -2403,48 +2403,33 @@
    "source": [
     "%%file 0x00-shell_basics/102-tree\n",
     "#!/bin/bash\n",
-    "mkdir welcome/to/school"
+    "mkdir -p welcome/to/school"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 83,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "mkdir: cannot create directory ‘welcome/to/school’: File exists\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "to\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%bash\n",
     "touch ./test.HTML\n",
     "chmod u+x 0x00-shell_basics/102-tree\n",
     "source ./0x00-shell_basics/102-tree\n",
-    "ls welcome/"
+    "ls welcome/to/school/"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 1d64d7f] 102-tree\n",
-      " 2 files changed, 10 insertions(+), 11 deletions(-)\n"
+      "[main 17da25b] 102-tree\n",
+      " 2 files changed, 8 insertions(+), 10 deletions(-)\n"
      ]
     },
     {
@@ -2452,7 +2437,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   9f10d30..1d64d7f  main -> main\n"
+      "   1d64d7f..17da25b  main -> main\n"
      ]
     }
    ],
