--- a/alx-system_engineering-devops.ipynb
+++ b/alx-system_engineering-devops.ipynb
@@ -2389,7 +2389,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#create multiple nested folders by adding the -p \n",
+    "# –p option ensures that intermediate directories are created"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -2408,7 +2418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2421,15 +2431,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 17da25b] 102-tree\n",
-      " 2 files changed, 8 insertions(+), 10 deletions(-)\n"
+      "[main c23276b] 102-tree\n",
+      " 2 files changed, 10 insertions(+), 25 deletions(-)\n"
      ]
     },
     {
@@ -2437,7 +2447,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   1d64d7f..17da25b  main -> main\n"
+      "   17da25b..c23276b  main -> main\n"
      ]
     }
    ],
