--- a/alx-system_engineering-devops.ipynb
+++ b/alx-system_engineering-devops.ipynb
@@ -2431,15 +2431,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main c23276b] 102-tree\n",
-      " 2 files changed, 10 insertions(+), 25 deletions(-)\n"
+      "[main c6a7b42] 102-tree\n",
+      " 1 file changed, 16 insertions(+), 6 deletions(-)\n"
      ]
     },
     {
@@ -2447,7 +2447,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   17da25b..c23276b  main -> main\n"
+      "   c23276b..c6a7b42  main -> main\n"
      ]
     }
    ],
