--- a/alx-system_engineering-devops.ipynb
+++ b/alx-system_engineering-devops.ipynb
@@ -2431,15 +2431,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main c6a7b42] 102-tree\n",
-      " 1 file changed, 16 insertions(+), 6 deletions(-)\n"
+      "[main 79a006e] 102-tree\n",
+      " 1 file changed, 4 insertions(+), 4 deletions(-)\n"
      ]
     },
     {
@@ -2447,7 +2447,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   c23276b..c6a7b42  main -> main\n"
+      "   c6a7b42..79a006e  main -> main\n"
      ]
     }
    ],
@@ -2455,6 +2455,128 @@
     "%%bash\n",
     "git add .\n",
     "git commit -m \"102-tree\"\n",
+    "git push"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### \n",
+    "\n",
+    "\n",
+    "---\n",
+    "<center>\n",
+    "<h4> 18. Life is a series of commas, not periods</h4>\n",
+    "</center>\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Write a command that lists all the files and directories of the current directory, separated by commas `(,)`.\n",
+    "\n",
+    "* Directory names should end with a slash (/)\n",
+    "* Files and directories starting with a dot (.) should be listed\n",
+    "* The listing should be alpha ordered, except for the directories . and .. which should be listed at the very beginning\n",
+    "* Only digits and letters are used to sort; Digits should come first\n",
+    "* You can assume that all the files we will test with will have at least one letter or one digit\n",
+    "* The listing should end with a new line\n",
+    "\n",
+    "\n",
+    "```bash\n",
+    "ubuntu@ubuntu:~/$ ls -a\n",
+    "\n",
+    ".  ..  0-commas  0-commas-checks  1-empty_casks  2-gifs  3-directories  4-zeros  5-rot13  6-odd  7-sort_rot13  Makefile  quote  .test  test_dir  test.var\n",
+    "\n",
+    "ubuntu@ubuntu:~/$ ./103-commas\n",
+    "\n",
+    "./, ../, 0-commas, 0-commas-checks/, 1-empty_casks, 2-gifs, 3-directories, 4-zeros, 5-rot13, 6-odd, 7-sort_rot13, Makefile, quote, .test, test_dir/, test.var\n",
+    "\n",
+    "ubuntu@ubuntu:~/$\n",
+    "\n",
+    "#### Repo:\n",
+    "\n",
+    "* GitHub repository: `alx-system_engineering-devops`\n",
+    "* Directory: `0x00-shell_basics`\n",
+    "* File: `103-commas`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing 0x00-shell_basics/103-commas\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file 0x00-shell_basics/103-commas\n",
+    "#!/bin/bash\n",
+    "ls -axmp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "./, ../, .git/, .gitignore, 0x00-shell_basics/, README.md, __ls__,\n",
+      "alx-system_engineering-devops.ipynb, test.HTML, welcome/\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "chmod u+x 0x00-shell_basics/103-commas\n",
+    "source ./0x00-shell_basics/103-commas\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[main 79a006e] 102-tree\n",
+      " 1 file changed, 4 insertions(+), 4 deletions(-)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
+      "   c6a7b42..79a006e  main -> main\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "git add .\n",
+    "git commit -m \"103-commas\"\n",
     "git push"
    ]
   },
